# ProductScraperPlatform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: celery.py  settings.py
src/parser_app/: admin.py  models.py  tasks.py
src/parser_app/migrations/: 0001_initial.py
src/parser_app/services/: selenium_service.py
