[project]
name = "productscraperplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-celery-results>=2.6.0",
    "djangorestframework>=3.16.0",
    "redis>=6.1.0",
    "selenium>=4.32.0",
]
